<resources>
    <string name="app_name" translatable="false">ViewApp</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="log_in_to_your_account" translatable="false">Log in to your account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="unknown" translatable="false">Unknown</string>
    <string name="library" translatable="false">Library</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="copy_password" translatable="false">Copy password</string>
    <string name="register" translatable="false">Register</string>
    <string name="creating_an_account" translatable="false">Creating an account</string>
    <string name="remember_me" translatable="false">Remember me</string>
    <string name="email">Email</string>
</resources>